--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,10 @@ dependencies:
   dot_navigation_bar: ^1.0.1+4
   google_fonts: ^3.0.1
   flutter_staggered_grid_view: ^0.6.2
-
+  draggable_home: ^1.0.2
+  sliding_up_panel: ^2.0.0+1
+  flutter_tagging: ^3.0.0
+  google_nav_bar: ^5.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
