--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.1.1
-  dot_navigation_bar: ^1.0.1+4
   google_fonts: ^3.0.1
   flutter_staggered_grid_view: ^0.6.2
   draggable_home: ^1.0.2
   sliding_up_panel: ^2.0.0+1
   flutter_tagging: ^3.0.0
   google_nav_bar: ^5.0.6
+  firebase_auth: ^3.6.1
+  line_icons: ^2.0.0
+  firebase_core: ^1.20.0
+  cloud_firestore: ^3.4.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
