--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
                  to determine the Window background behind the Flutter UI. -->
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
+
               android:resource="@style/NormalTheme"
               />
             <intent-filter>
@@ -29,6 +30,10 @@
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
-            android:value="2" />
+            android:value="2" 
+            />
+        <meta-data
+                    android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAKUKMZNX5EZcADQYjgkp19IJ24uwFsg7A"/>
     </application>
 </manifest>
