--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   carousel_slider: ^4.1.1
   google_fonts: ^3.0.1
   flutter_staggered_grid_view: ^0.6.2
-  draggable_home: ^1.0.2
   sliding_up_panel: ^2.0.0+1
   flutter_tagging: ^3.0.0
   google_nav_bar: ^5.0.6
@@ -44,6 +43,9 @@ dependencies:
   line_icons: ^2.0.0
   firebase_core: ^1.20.0
   cloud_firestore: ^3.4.2
+  google_maps_flutter: ^2.1.10
+  flutter_google_places: ^0.3.0
+  location: ^4.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
